<resources>
    <string name="app_name">PlanPec</string>

    <!--Hint's-->
    <!--Edit Text's   -->
    <string name="hint_et_nome">Nome de Usuário</string>
    <string name="hint_et_senha">Senha</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_telefone">(DDD) Telefone</string>
    <string name="hint_numero_animais">qtde</string>
    <string name="hint_et_pesoInicial">P I</string>
    <string name="hint_et_pesoFinal">P F</string>
    <string name="hint_et_pesoVerao">P V</string>
    <string name="hint_et_pesoOutono">P O</string>
    <string name="hint_et_pesoInverno">P INV</string>
    <string name="hint_et_pesoPrimavera">P P</string>
    <string name="hint_et_nomeProrpriedade">Nome da propriedade</string>
    <string name="hint_et_area">Área</string>
    <string name="hint_et_nova_senha">Nova senha</string>
    <string name="hint_et_nova_senha_repeat">Repita a senha</string>

    <!--Text's    -->
    <!--TextViews -->
    <string name="txt_tv_tituloPerfil">Perfil</string>
    <string name="txt_tv_criarPerfil">Criar perfil</string>
    <string name="txt_tv_login">Login</string>
    <string name="txt_tv_cadastraPropriedade">Cadastre sua Propriedade</string>
    <string name="txt_tv_local_propriedade">Selecione no mapa a localidade</string>
    <string name="txt_tv_clima_selecionado">Clima selecionado:</string>
    <string name="txt_tv_total">Total</string>
    <string name="txt_tv_zero">0</string>
    <string name="txt_tv_uaHa">UA/HA</string>
    <string name="txt_tv_janeiro">Jan</string>
    <string name="txt_tv_fevereiro">Fev</string>
    <string name="txt_tv_marco">Mar</string>
    <string name="txt_tv_abril">Abr</string>
    <string name="txt_tv_maio">Mai</string>
    <string name="txt_tv_junho">Jun</string>
    <string name="txt_tv_julho">Jul</string>
    <string name="txt_tv_agosto">Ago</string>
    <string name="txt_tv_setembro">Set</string>
    <string name="txt_tv_outubro">Out</string>
    <string name="txt_tv_novembro">Nov</string>
    <string name="txt_tv_dezembro">Dez</string>
    <string name="txt_tv_AreaTotalPastagem">Área total pastagem</string>
    <string name="txt_tv_ha">ha</string>
    <string name="txt_tv_TotalMes">Total/mês:</string>
    <string name="txt_tv_totalEstacao">Total/Estação:</string>
    <string name="txt_tv_verao">Ver</string>
    <string name="txt_tv_outono">Out</string>
    <string name="txt_tv_inverno">Inv</string>
    <string name="txt_tv_primavera">Prim</string>
    <string name="txt_tv_categoriaLote">Categoria/Lote</string>
    <string name="txt_tv_Consumo">Consumo\n(%PV)</string>
    <string name="txt_tv_numeroAnimais">N de\nAnimais</string>
    <string name="txt_tv_entrada">Entrada\nno Pasto</string>
    <string name="txt_tv_pesoInicial">Peso\nInicial</string>
    <string name="txt_tv_pesoFinal">Peso\nFinal</string>
    <string name="txt_tv_ganhoDePeso">Ganho de Peso (g/dia)</string>
    <string name="txt_tv_ganhoPesoDiaVerao">Verão</string>
    <string name="txt_tv_ganhoPesoDiaOutono">Outono</string>
    <string name="txt_tv_ganhoPesoDiaInverno">Inverno</string>
    <string name="txt_tv_ganhoPesoDiaPrimavera">Primavera</string>
    <string name="txt_tv_pesoMedioAnimaisMes">Peso Médio dos Animais (kg/mês)</string>
    <string name="txt_tv_piquete">Piquetes / \nPastagens</string>
    <string name="txt_tv_condicaoPastagem">Condição da\nPastagem</string>
    <string name="txt_tv_areaHa">Área\n(ha)*</string>
    <string name="txt_tv_producaoEstimadaAno">Produção Estimada (kg.MS/ha.ano)</string>
    <string name="txt_tv_producaoEstimadaMes">Produção Estimada (kg. MS/mês)</string>
    <string name="txt_tv_producaoEstimada">Produção estimada</string>
    <string name="txt_tv_bemVindo">Bem vindo</string>
    <string name="txt_tv_nomeProp">Nome da propriedade</string>
    <string name="txt_tv_areaProp">Área Prop</string>
    <string name="txt_tv_qnt">Qtde</string>
    <string name="txt_tv_cadastreAnimais">Cadastre os Animais</string>
    <string name="txt_tv_config">Configurações</string>
    <string name="txt_tv_clima">Sem clima definido</string>
    <string name="txt_tv_config_cfa">Clima Quente - cfa</string>
    <string name="txt_tv_config_cfb">Clima Frio - cfb</string>
    <string name="txt_tv_seusDados">Seu Dados</string>
    <string name="txt_tv_dadosPerfil">Dados Perfil</string>
    <string name="txt_tv_nome">Nome</string>
    <string name="txt_tv_email">Email</string>
    <string name="txt_tv_telefone">Telefone</string>
    <string name="text_tv_senha">Senha</string>
    <string name="txt_tv_pagIni">Página Inicial</string>
    <string name="txt_tv_cadastroPique">Cadastre os Piquetes</string>
    <string name="txt_tv_cadastreProp">Cadastre a Propriedade</string>
    <string name="txt_tv_sobre">Sobre</string>
    <string name="txt_tv_sobreNos">Sobre Nós</string>
    <string name="txt_tv_textoSobre">
        O aplicativo para planejamento e balanço forrageiro desenvolvido pela Epagri, IFSC e UFPR, Embrapa veio para auxiliar e facilitar o trabalho
        dos técnicos e pecuaristas, permitindo um controle maior da produção de forragem e lotação animal em suas pastagens de forma ágil e prática.
        O planejamento forrageiro é essencial para que o pecuarista tenha mais controle e eficiência de sua produção, possibilitando atingir patamares
        e objetivos maiores em sua propriedade em um cenário de cada vez maior competitividade regional, nacional e internacional da pecuária.
    </string>
    <string name="txt_tv_dadosProp">Dados da Propriedade</string>
    <string name="txt_tv_planpec">PlanPec</string>
    <string name="txt_tv_inicio">Início</string>
    <string name="txt_tv_config_msg">Que dados você deseja editar?</string>
    <string name="txt_tv_titulo_tabela_edit">Estimativas da Produção Total e Distribuição das Principais Forrageiras</string>
    <string name="txt_tv_condicao_degrada">Condição\nDegradada</string>
    <string name="txt_tv_condicao_media">Condição\nMédia</string>
    <string name="txt_tv_condicao_otima">Condição\nÓtima</string>
    <string name="txt_tv_recuperarSenha">Esqueceu sua senha?</string>
    <string name="txt_tv_nomeInicio">Nome:</string>
    <string name="txt_tv_emailInicio">Email:</string>
    <string name="txt_tv_tituloRecuperaSenha">Recuperar Senha</string>
    <string name="txt_tv_subTituloRecuperaSenha">(Digite o email cadastrado para modificar sua senha.)</string>
    <string name="txt_tv_tituloModificaSenha">Digite aqui sua nova senha:</string>
    <string name="txt_tv_opcoes_propriedade">Opções</string>
    <string name="txt_tv_opcoes_propriedade_texto">Para poder visualizar o gráfico da proposta é necessário editar os dados e realizar uma proposta.</string>


    <!-- List View -->
    <string name="txt_lv_propriedade_nome">Nome: </string>
    <string name="txt_lv_propriedade_area">Área: </string>
    <string name="txt_lv_propriedade_qtde_animais">Qtde de Animais: </string>
    <string name="bt_lv_ver_dados">Ver Dados </string>
    <string name="bt_lv_ver_grafico_atual">Ver Gráfico Atual </string>
    <string name="bt_lv_ver_grafico_proposta">Ver Gráfico Proposta </string>
    <string name="bt_lv_excluir">Excluir </string>

    <!--Buttons   -->
    <string name="txt_bt_login">Login</string>
    <string name="txt_bt_criar">Criar</string>
    <string name="txt_bt_deletarUsuarios">Deletar todos os usuários</string>
    <string name="txt_bt_listarUsuarios">Listar Usuários</string>
    <string name="txt_bt_proximo_passo">Próximo Passo</string>
    <string name="txt_bt_adicionar">+</string>
    <string name="txt_bt_remover">-</string>
    <string name="txt_bt_finalizar">Finalizar</string>
    <string name="txt_bt_cadastroPropriedade">Cadastrar Propriedade</string>
    <string name="txt_bt_cancelar">Cancelar</string>
    <string name="txt_bt_atualizar">Atualizar</string>
    <string name="txt_bt_cfa">cfa</string>
    <string name="txt_bt_cfb">cfb</string>
    <string name="txt_bt_modicar">Modificar senha</string>
    <string name="txt_bt_confirmar">Confirmar</string>
    <string name="txt_bt_editar_dados">Editar Dados</string>
    <string name="txt_bt_atualizar_dados">Atualizar Dados</string>

    <!-- Content Description das Imagens -->
    <string name="cd_logo_ufpr">Logo UFPR</string>
    <string name="cd_logo_ifsc">Logo IFSC</string>
    <string name="cd_logo_epagri">Logo EPAGRI</string>
    <string name="img_inicial">Imagem Inicial</string>

    <!-- Tab Items-->
    <string name="txt_tab_oferta_atual">Oferta Atual</string>
    <string name="txt_tab_demanda_atual">Demanda Atual</string>
    <string name="txt_tab_oferta_proposta">Oferta Proposta</string>
    <string name="txt_tab_demanda_proposta">Demanda Proposta</string>
    <string name="todo">TODO</string>

    <!-- Image views   -->
    <string name="txt_img_logoIni">Logo de inicio</string>
    <string name="txt_img_logoPerfil">Logo perfil</string>
    <string name="txt_img_logoSobre">Logo sobre</string>
    <string name="txt_img_logoConfig">Logo configurações</string>
    <string name="txt_tv_sair">Sair</string>
    <string name="txt_img_logoSair">Logo sair</string>
    <string name="txt_bt_excluirConta">Excluir conta</string>
    <string name="cd_logo_emprapa">LOGO EMBRAPA</string>

    <!-- Toolbars title -->
    <string name="tb_title_cadastrar_piquetes">Cadastrar Piquetes</string>
    <string name="tb_title_cadastrar_animais">Cadastrar Animais</string>

    <!-- Menu Propriedades -->
    <string name="menu_ver_dados">Ver Dados</string>
    <string name="menu_fazer_proposta">Fazer Proposta</string>
    <string name="menu_grafico_atual">Ver Gráfico da Situação Atual</string>
    <string name="menu_grafico_proposta">Ver Gráfico da Proposta</string>

</resources>