<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00B050">

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="200sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_categoriaLote"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_consumo"
        android:layout_width="90sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_Consumo"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_Nanimais"
        android:layout_width="70sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_numeroAnimais"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_entrada"
        android:layout_width="140sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_entrada"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginRight="15sp"
        />

    <TextView
        android:id="@+id/tv_pesoInicial"
        android:layout_width="70sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_pesoInicial"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tv_pesoFinal"
        android:layout_width="60sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_pesoFinal"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_ganhoPesoVer"
        android:layout_width="180sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_ganhoPesoDiaVerao"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        />


    <TextView
        android:id="@+id/tv_ganhoPesoOut"
        android:layout_width="180sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_ganhoPesoDiaOutono"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tv_ganhoPesoInv"
        android:layout_width="180sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_ganhoPesoDiaInverno"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tv_ganhoPesoPrim"
        android:layout_width="180sp"
        android:layout_height="80sp"
        android:layout_weight="1"
        android:background="#00B050"
        android:gravity="center"
        android:text="@string/txt_tv_ganhoPesoDiaPrimavera"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        />


    <include layout="@layout/tabela_demanda_atual_2"></include>

</LinearLayout>