<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >


    <TextView
        android:id="@+id/tv_AreaTotalEsta"
        android:layout_width="675sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end"
        android:text="@string/txt_tv_totalEstacao"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
         />


    <TextView
        android:id="@+id/tv_AreaTotalVer"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/txt_tv_verao"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/tv_AreaTotalOut"
        android:layout_width="115sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/txt_tv_outono"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        />


    <TextView
        android:id="@+id/tv_AreaTotalInve"
        android:layout_width="180sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/txt_tv_inverno"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
       />


    <TextView
        android:id="@+id/tv_AreaTotalPrim"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/txt_tv_primavera"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        />
</TableRow>