<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="25sp"
        android:text="@string/txt_tv_login"
        android:textAlignment="center"
        android:textColor="#0B0B0A"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_et_nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/hint_et_senha"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_bt_login" />

    <TextView
        android:id="@+id/tv_criarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:text="@string/txt_tv_criarPerfil"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />
</LinearLayout>