<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00B050">

    <TextView
        android:id="@+id/tv_piquetePastagem"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:background="@drawable/borda_preta_fundo_verde"
        android:gravity="center"
        android:text="@string/txt_tv_piquete"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_condicao"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/borda_preta_fundo_verde"
        android:gravity="center"
        android:text="@string/txt_tv_condicaoPastagem"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_area"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/borda_preta_fundo_verde"
        android:gravity="center"
        android:text="@string/txt_tv_areaHa"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_prodEstimadaAno"
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/borda_preta_fundo_verde"
        android:gravity="center"
        android:text="@string/txt_tv_producaoEstimadaAno"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

        <include layout="@layout/tabela_oferta_2"/>

</LinearLayout>