<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_prodEstimadaMes"
        android:layout_width="358dp"
        android:layout_height="20dp"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/borda_preta_fundo_verde"
        android:gravity="center"
        android:text="@string/txt_tv_ganhoDePeso"
        android:textColor="@color/preto"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ganhoPesoVer"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/borda_preta_fundo_verde"
            android:gravity="center"
            android:text="@string/txt_tv_ganhoPesoDiaVerao"
            android:textColor="@color/preto"

            android:textSize="14sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_ganhoPesoOut"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/borda_preta_fundo_verde"
            android:gravity="center"
            android:text="@string/txt_tv_ganhoPesoDiaOutono"
            android:textColor="@color/preto"

            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ganhoPesoInv"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/borda_preta_fundo_verde"
            android:gravity="center"
            android:text="@string/txt_tv_ganhoPesoDiaInverno"
            android:textColor="@color/preto"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ganhoPesoPrim"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:background="@drawable/borda_preta_fundo_verde"
            android:gravity="center"
            android:text="@string/txt_tv_ganhoPesoDiaPrimavera"
            android:textColor="@color/preto"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>